kubernetes/apps/jellyfin/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: web-ui
